--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,10 @@
 .env*
 test_case.txt
 dspy_case.ipynb
-not
+z_not
+main_01.ipynb
+main_02.ipynb
+/A7/
+matching_experiments.ipynb
+projectextract_experiments.ipynb
+Z_test_01.ipynb
